--- a/Kafala.Query/packages.config
+++ b/Kafala.Query/packages.config
@@ -2,10 +2,17 @@
 <packages>
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
+  <package id="Foundation.Infrastructure" version="0.9" targetFramework="net45" />
+  <package id="Foundation.Persistence" version="0.9" targetFramework="net45" />
+  <package id="Foundation.Web" version="0.9" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
 </packages>
