--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -3,6 +3,13 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
+  <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
+  <package id="Foundation.FormBuilder" version="0.9" targetFramework="net45" />
+  <package id="Foundation.Infrastructure" version="0.9" targetFramework="net45" />
+  <package id="Foundation.Persistence" version="0.9" targetFramework="net45" />
+  <package id="Foundation.Web" version="0.9" targetFramework="net45" />
+  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
@@ -15,6 +22,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net40" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net40" />
